[gd_scene load_steps=8 format=3 uid="uid://d0y0cjwmfwcbe"]

[ext_resource type="Script" uid="uid://bfjujklpaw7rt" path="res://node_2d.gd" id="1_d21ai"]
[ext_resource type="Texture2D" uid="uid://d5orj5los86m" path="res://images for background/first room.png" id="1_q6r6c"]
[ext_resource type="Texture2D" uid="uid://cha0vytvj2ecb" path="res://items/left-arrow.png" id="2_kdubu"]
[ext_resource type="Texture2D" uid="uid://cbu7if6dq1lw2" path="res://images for background/second room.png" id="3_d21ai"]
[ext_resource type="Texture2D" uid="uid://duwbqrtiifm1m" path="res://items/right-arrow.png" id="4_4d7sh"]
[ext_resource type="Texture2D" uid="uid://cxvjq1e7vsljy" path="res://images for background/third room.png" id="4_rj586"]
[ext_resource type="Texture2D" uid="uid://cm2tfsq70j4fs" path="res://images for background/fourth room.png" id="5_4d7sh"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_d21ai")

[node name="FirstRoom" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 718.0
texture = ExtResource("1_q6r6c")

[node name="LeftArrow1" type="Button" parent="FirstRoom"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -29.0
offset_right = 58.0
offset_bottom = 29.0
grow_vertical = 2
icon = ExtResource("2_kdubu")

[node name="RightArrow1" type="Button" parent="FirstRoom"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("4_4d7sh")

[node name="SecondRoom" type="TextureRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 718.0
texture = ExtResource("3_d21ai")

[node name="LeftArrow2" type="Button" parent="SecondRoom"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -29.0
offset_right = 58.0
offset_bottom = 29.0
grow_vertical = 2
icon = ExtResource("2_kdubu")

[node name="RightArrow2" type="Button" parent="SecondRoom"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("4_4d7sh")

[node name="ThirdRoom" type="TextureRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 718.0
texture = ExtResource("4_rj586")

[node name="LeftArrow3" type="Button" parent="ThirdRoom"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -29.0
offset_right = 58.0
offset_bottom = 29.0
grow_vertical = 2
icon = ExtResource("2_kdubu")

[node name="RightArrow3" type="Button" parent="ThirdRoom"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("4_4d7sh")

[node name="FourthRoom" type="TextureRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 718.0
texture = ExtResource("5_4d7sh")

[node name="LeftArrow4" type="Button" parent="FourthRoom"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -29.0
offset_right = 58.0
offset_bottom = 29.0
grow_vertical = 2
icon = ExtResource("2_kdubu")

[node name="RightArrow4" type="Button" parent="FourthRoom"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("4_4d7sh")

[connection signal="pressed" from="FirstRoom/LeftArrow1" to="." method="go_to_room4"]
[connection signal="pressed" from="FirstRoom/RightArrow1" to="." method="go_to_room2"]
[connection signal="pressed" from="SecondRoom/LeftArrow2" to="." method="go_to_room1"]
[connection signal="pressed" from="SecondRoom/RightArrow2" to="." method="go_to_room3"]
[connection signal="pressed" from="ThirdRoom/LeftArrow3" to="." method="go_to_room2"]
[connection signal="pressed" from="ThirdRoom/RightArrow3" to="." method="go_to_room4"]
[connection signal="pressed" from="FourthRoom/LeftArrow4" to="." method="go_to_room3"]
[connection signal="pressed" from="FourthRoom/RightArrow4" to="." method="go_to_room1"]
